jamMigrationZips/sql/test/deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 15:15:05 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bdinqservicesit7
  name: bdinqservicesit7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bdinqservicesit7
  template:
    metadata:
      labels:
        app: bdinqservicesit7
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: bdinqservicesit7
          ports:
            - containerPort: 9080
              protocol: TCP
