jamMigrationZips/sql/test/deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 15:15:05 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bdinqservicesit7
  name: bdinqservicesit7
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: bdinqservicesit7
    weight: 100
