jamMigrationZips/sql/test/deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Tue Apr 02 15:15:05 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bdinqservicesit7
  name: bdinqservicesit7
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: bdinqservicesit7
